<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.example.addviewbc.ProfileViewActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo"
            android:padding="13dp"
            android:src="@drawable/back_arrow"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="68dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="@font/berkshire_swash"
            android:layout_toEndOf="@+id/back_button"
            android:text="Profile"
            android:textColor="@color/red"
            android:textSize="38dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/label_name"
            android:text="@string/profile_creator_form_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_view_name"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkblue"
            android:textStyle="bold"
            android:textSize="40px" />
        <TextView
            android:id="@+id/label_job_title"
            android:text="@string/profile_creator_form_job_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_view_job_title"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkblue"
            android:textStyle="bold"
            android:textSize="40px" />
        <TextView
            android:id="@+id/label_company"
            android:text="@string/profile_creator_form_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_view_company"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkblue"
            android:textStyle="bold"
            android:textSize="40px" />
        <TextView
            android:id="@+id/label_telephone"
            android:text="@string/profile_creator_form_telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_view_telephone"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkblue"
            android:textStyle="bold"
            android:textSize="40px" />
        <TextView
            android:id="@+id/label_email"
            android:text="@string/profile_creator_form_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/darkblue"
            android:textStyle="bold"
            android:textSize="40px" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
           android:gravity="center_horizontal"
            android:orientation="horizontal">
            <Button
                android:id="@+id/return_to_list_button"
                android:text="@string/profile_viewer_return_to_list_button"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:backgroundTint="#6DE842"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>