<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.addviewbc.ProfileCreatorActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="#89EC67"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="13dp"
                android:src="@drawable/back_arrow"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Card Information"
                android:textSize="22dp"
                android:textStyle="bold"
                android:textColor="#F81414"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_name"
                android:text="@string/profile_creator_form_name"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/name_candidates_button"
                android:text="@string/profile_creator_select_button"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:backgroundTint="#6DE842"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_job_title"
                android:text="@string/profile_creator_form_job_title"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/job_title_candidates_button"
                android:text="@string/profile_creator_select_button"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:backgroundTint="#6DE842"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <EditText
            android:id="@+id/input_job_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_company"
                android:text="@string/profile_creator_form_company"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/company_candidates_button"
                android:text="@string/profile_creator_select_button"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:backgroundTint="#6DE842"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <EditText
            android:id="@+id/input_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_telephone"
                android:text="@string/profile_creator_form_telephone"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/telephone_candidates_button"
                android:text="@string/profile_creator_select_button"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:backgroundTint="#6DE842"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <EditText
            android:id="@+id/input_telephone"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_email"
                android:text="@string/profile_creator_form_email"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/email_candidates_button"
                android:text="@string/profile_creator_select_button"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:backgroundTint="#6DE842"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/save_button"
                android:text="@string/profile_creator_button_save_form"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:backgroundTint="#6DE842"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/rescan_button"
                android:text="@string/profile_creator_button_rescan"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:backgroundTint="#6DE842"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/exit_button"
                android:text="@string/profile_creator_button_exit"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:backgroundTint="#6DE842"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>